--- a/anovalabs_client/public/index.html
+++ b/anovalabs_client/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4/css/tachyons.min.css">
+    <link rel="stylesheet">
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>ANova Labs Homepage</title>
